--- a/style.css
+++ b/style.css
@@ -78,13 +78,12 @@ nav.nav-panel {
 /* ========== MAIN PANEL WRAPPERS ========== */
 .menu-wrapper {
 	display: grid;
-	grid-template-columns: 1fr 4fr;
+	grid-template-rows: min-content min-content;
+	grid-template-columns: auto;
+
 	grid-template-areas:
-		"drinks sushi"
-		"drinks nigiri"
-		"r-and-s r-and-s"
-		"small-plates small-plates"
-		"reference reference";
+		"top-panel"
+		"reference";
 }
 
 .about-wrapper {
@@ -104,7 +103,6 @@ nav.nav-panel {
 
 .map-wrapper {
 	align-items: center;
-    
 }
 
 .home-wrapper {
@@ -182,6 +180,19 @@ hr {
 
 
 /* ========== ELEMENT CLASSES IN MENU PAGE ========== */
+.menu-wrapper .category-button-panel {
+	grid-template-columns: repeat(7, auto);
+}
+
+.menu-top-panel {
+	grid-template-columns: 1fr;
+	grid-template-rows: auto auto;
+	grid-area: top-panel;
+}
+
+
+
+
 .ramen-sides {
 	grid-area: r-and-s;
 	display: grid;
