login/logout and sign up should be working

--- a/style.css
+++ b/style.css
@@ -427,6 +427,7 @@ details summary {
 	grid-auto-rows: min-content;
 	color: #741c1c; /* text color */
 	font-weight: bold;
+	overflow-y: scroll;
 }
 
 .invisible {
